@@ -501,12 +501,12 @@ dnl *******************
 dnl LIBNOTIFY
 dnl *******************
 
-LIBNOTIFY_REQUIRED=0.2
+LIBNOTIFY_REQUIRED=0.3
 
 # Allow libnotify to be disabled
 AC_ARG_ENABLE(libnotify, 
-	    AC_HELP_STRING([--disable-libnotify],
-	    [Don't compile in libnotify support]))   
+        AC_HELP_STRING([--disable-libnotify],
+        [Don't compile in libnotify support]))   
         
 if test "x$enable_libnotify" = "xno"; then
     echo "disabling libnotify support"
