@@ -1,3 +1,8 @@
+2006-02-25  Nate Nielsen  <nielsen@memberwebs.com>
+
+    * configure.in:
+    * libseahorse/seahorse-notification.c: Update libnotify support to 0.3
+    
 2006-02-24  Nate Nielsen  <nielsen@memberwebs.com>
 
     * daemon/seahorse-daemon.c:
